# reclip

./: .gitignore  CLAUDE.md  README.md  final_mask_html_b64.txt  index.html  mask_html_b64.txt  package-lock.json  package.json  png_base64.txt  refresh_icons.ps1  vite.config.ts
scratch/: auto_crop.html  create_auto_crop.cjs  create_final_mask_html.cjs  create_mask_html.cjs  create_svg.cjs  create_svg_clean.cjs  mask.html  mask_gold.html  mask_gold_final.html  server.cjs
scripts/: download-sidecars.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compress_args.rs  compressor.rs  config.rs  converter.rs  ffmpeg_args.rs  ffprobe.rs  history.rs  jobs.rs  main.rs
src-tauri/src/commands/: compress.rs  config.rs  convert.rs  download.rs  history.rs  mod.rs
src/components/: AudioWaveform.tsx  ClipboardToast.tsx  ContextMenu.tsx  DownloadAllBar.tsx  EmptyState.tsx  HistoryView.tsx  ImageWithFallback.tsx  InputArea.tsx  PlatformIcon.tsx  PlaylistHeader.tsx  QualityChip.tsx  SettingsView.tsx  TitleBar.tsx  VideoCard.tsx
src/components/compressor/: CompressionCard.tsx  CompressionSettings.tsx  CompressorView.tsx
src/components/converter/: ConversionCard.tsx  (+4 more)
src/contexts/: ConfigContext.tsx
src/fonts/: fonts.css
src/hooks/: useClipboardWatcher.ts  useCompressor.ts  useConverter.ts  useDownloadManager.ts
src/lib/: compressor-tauri.ts  converter-tauri.ts  tauri.ts  utils.ts
src/styles/: index.css  theme.css
src/types/: compressor.ts  converter.ts  index.ts
(+7 files in other folders)
